Adjust documentation and Upload Car Images
